// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserListRow should match snapshot 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 10,
      "overflow": "hidden",
    }
  }
>
  <CustomListRow
    enabled={true}
    id="21345"
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "color": "#3d3c40",
          "flexDirection": "row",
        }
      }
    >
      <Connect(ProfilePicture)
        size={32}
        userId="21345"
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "marginLeft": 10,
        }
      }
    >
      <View>
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#3d3c40",
              "fontSize": 15,
            }
          }
        >
          @user
        </Text>
      </View>
    </View>
  </CustomListRow>
</View>
`;

exports[`UserListRow should match snapshot for  currentUser with (you) populated in list 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 10,
      "overflow": "hidden",
    }
  }
>
  <CustomListRow
    enabled={true}
    id="21345"
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "color": "#3d3c40",
          "flexDirection": "row",
        }
      }
    >
      <Connect(ProfilePicture)
        size={32}
        userId="21345"
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "marginLeft": 10,
        }
      }
    >
      <View>
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#3d3c40",
              "fontSize": 15,
            }
          }
        />
      </View>
    </View>
  </CustomListRow>
</View>
`;

exports[`UserListRow should match snapshot for deactivated user 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 10,
      "overflow": "hidden",
    }
  }
>
  <CustomListRow
    enabled={true}
    id="21345"
    onPress={[Function]}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "color": "#3d3c40",
          "flexDirection": "row",
        }
      }
    >
      <Connect(ProfilePicture)
        size={32}
        userId="21345"
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "marginLeft": 10,
        }
      }
    >
      <View>
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#3d3c40",
              "fontSize": 15,
            }
          }
        >
          @user
        </Text>
      </View>
      <View>
        <Text
          style={
            Object {
              "color": undefined,
              "fontSize": 12,
              "marginTop": 2,
            }
          }
        />
      </View>
    </View>
  </CustomListRow>
</View>
`;
